[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adeso"
version = "0.0.1"
authors = [
  { name="Eric Jay Hartman", email="ericjayhartman@gmail.com" },
]
description = "Application for Decryption, Encryption and Steganographic Operations"
readme = "README.md"
requires-python = ">=3.11.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNUAGP3 License",
    "Operating System :: OS Independent",
]
dependencies = [
  "bitarray~=2.7.*",
  "blinker~=1.6.*",
  "certifi~=2023.5.*",
  "cffi~=1.15.*",
  "charset-normalizer~=3.1.*",
  "click~=8.1.*",
  "colorama~=0.4.*",
  "cryptography~=41.0.*",
  "Flask~=2.3.*",
  "Flask-Cors~=4.0.*",
  "ghp-import~=2.1.*",
  "idna~=3.4.*",
  "itsdangerous~=2.1.*",
  "Jinja2~=3.1.*",
  "Markdown~=3.3.*",
  "MarkupSafe~=2.1.*",
  "mergedeep~=1.3.*",
  "mkdocs~=1.4.*",
  "mkdocs-material~=9.1.*",
  "mkdocs-material-extensions~=1.1.*",
  "numpy~=1.25.*",
  "packaging~=23.1.*",
  "Pillow~=10.0.*",
  "pycparser~=2.21.*",
  "Pygments~=2.15.*",
  "pymdown-extensions~=10.0.*",
  "python-dateutil~=2.8.*",
  "PyYAML~=6.0.*",
  "pyyaml_env_tag~=0.1.*",
  "regex~=2023.6.*",
  "requests~=2.31.*",
  "six~=1.16.*",
  "urllib3~=2.0.*",
  "watchdog~=3.0.*",
  "Werkzeug~=2.3.*",
]

[project.urls]
"Github" = "https://github.com/HartmanAnalytics/adeso"
"Documentation" = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/adeso"]
